--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Githup Repo</title>
 </head>
+
 <body>
-    
+    <h1>This is my first heading</h1>    
 </body>
 </html>
