--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
 
     <h1>This is my first heading</h1>    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, pariatur ipsum itaque totam, velit expedita amet repellat nisi deleniti eum ipsa eveniet odio eaque autem. Excepturi, quia aliquid vel impedit explicabo distinctio consequuntur laborum laudantium quisquam quos aperiam in cumque obcaecati esse aut quod atque voluptate perferendis dolores consequatur minus.</p>
 </body>
 </html>
